--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="inserte_el_nombre">Inserte el nombre</string>
     <string name="fecha">Fecha:</string>
     <string name="datos_campaña">Datos de la campaña</string>
+    <string name="inventario_botiquin">Inventario Botiquin</string>
 </resources>
