Esterilizacion completa, faltan validaciones y solucionar busqueda

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,7 @@
     <string name="datos_de_esterilizaci_n">Datos de esterilización</string>
     <string name="datos_del_gato">Datos del gato</string>
     <string name="buscar_responsable">Buscar responsable</string>
+    <string name="buscar_responable">Buscar Responable</string>
 
 
 </resources>
