--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,10 +31,11 @@
     <string name="cantidad">Cantidad:</string>
     <string name="presentacion">Presentacion:</string>
     <string name="guardar">Guardar</string>
-    <string name="nombre">Nombre:</string>
     <string name="categor_a">Categoría:</string>
     <string name="nombre_material">nombre_material</string>
     <string name="borrar_campa_a">Borrar campaña</string>
+    <string name="agregar_material">Agrega Material</string>
+    <string name="material_de_campaña">Material de Campaña</string>
 
 
 </resources>
